force-app/main/default/objects/Setting__c/fields/Illnesses__c.field-meta.xml
<CustomField>
    <fullName>Illnesses__c</fullName>
    <label>Illnesses</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>