force-app/main/default/objects/Setting__c/fields/Salary_Day__c.field-meta.xml
<CustomField>
    <fullName>Salary_Day__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Salary Day</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>