force-app/main/default/objects/Setting__c/fields/Vacations__c.field-meta.xml
<CustomField>
    <fullName>Vacations__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Vacations</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>